fixed doc and vertical align bug

--- a/libraries/ui-library/src/components/six-icon/six-icon.scss
+++ b/libraries/ui-library/src/components/six-icon/six-icon.scss
@@ -1,3 +1,8 @@
+:host {
+  display: inline-flex;
+  vertical-align: middle;
+}
+
 /* ==========================================================================
    Common icon text baseline
    ========================================================================== */
@@ -9,9 +14,7 @@
 .material-symbols {
   display: inline-block;
   vertical-align: middle;
-  line-height: 1;
   letter-spacing: normal;
-  text-transform: none;
   word-wrap: normal;
   white-space: nowrap;
   direction: ltr;
